@@ -63,6 +63,22 @@ class RemoteSafeChargeTest < Test::Unit::TestCase
     assert_equal 'Success', response.message
   end
 
+  def test_successful_purchase_aud
+    response = @gateway.purchase(@amount, @credit_card, @options.merge(currency: 'AUD'))
+    assert_success response
+    assert_equal 'Success', response.message
+    assert_equal 'AUD', response.params['requestedcurrency']
+    assert_equal 'AUD', response.params['processedcurrency']
+  end
+
+  def test_successful_purchase_cad
+    response = @gateway.purchase(@amount, @credit_card, @options.merge(currency: 'CAD'))
+    assert_success response
+    assert_equal 'Success', response.message
+    assert_equal 'CAD', response.params['requestedcurrency']
+    assert_equal 'CAD', response.params['processedcurrency']
+  end
+
   def test_successful_purchase_with_card_holder_verification
     response = @gateway.purchase(@amount, @credit_card, @options.merge(middle_name: 'middle', card_holder_verification: 1))
     assert_success response
